--- a/index.html
+++ b/index.html
@@ -3,33 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <title>Realistic SIP Returns Tool</title>
-  <style>
-    body { font-family: sans-serif; padding: 20px; max-width: 600px; margin: auto; }
-    input, select, button { padding: 8px; margin: 5px 0; width: 100%; }
-    .output { margin-top: 20px; background: #f0f0f0; padding: 15px; border-radius: 8px; }
-  </style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>📈 Realistic SIP Returns Tool</h1>
 
   <label for="fund">Select Fund:</label>
-  <select id="fund">
+  <select id="fund" onchange="document.getElementById('cagr').value = this.value">
     <option value="12">Axis Bluechip (12%)</option>
     <option value="14">Nippon Smallcap (14%)</option>
     <option value="10">Parag Parikh Flexi (10%)</option>
   </select>
 
-  <br><br>
+  <label for="sipAmount">💰 Monthly SIP (₹):</label>
+  <input type="number" id="sipAmount" placeholder="Enter amount" />
 
-  <label for="amount">Monthly Investment (₹):</label>
-  <input type="number" id="amount" placeholder="e.g. 5000"><br>
+  <label for="years">📅 Duration (Years):</label>
+  <input type="number" id="years" placeholder="Years" />
 
-  <label for="years">Investment Duration (years):</label>
-  <input type="number" id="years" placeholder="e.g. 10"><br>
+  <label for="cagr">📊 CAGR (%):</label>
+  <input type="number" id="cagr" placeholder="Auto or Manual" />
 
   <button onclick="calculateSIP()">Calculate</button>
 
-  <div id="result" class="output"></div>
+  <div class="output" id="result"></div>
 
   <script src="script.js"></script>
 </body>
