--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
     </select>
 
     <label for="sipAmount">💰 Monthly SIP (₹):</label>
-    <input type="number" id="sipAmount" placeholder="Enter amount">
+    <input type="number" id="sipAmount" placeholder="Enter amount" />
 
     <label for="years">📅 Duration (Years):</label>
-    <input type="number" id="years" placeholder="Years">
+    <input type="number" id="years" placeholder="Years" />
 
     <label for="cagr">📊 CAGR (%):</label>
-    <input type="number" id="cagr" placeholder="Auto or Manual">
+    <input type="number" id="cagr" placeholder="Auto or Manual" />
 
     <button onclick="calculateSIP()">Calculate</button>
-    <div id="result"></div>
+
+    <div class="output" id="result"></div>
   </div>
 
   <script src="script.js"></script>
