--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
 
     <label for="fund">Select Fund:</label>
     <select id="fund">
-      <option value="12">Axis Bluechip (12%)</option>
-      <option value="14">Nippon Smallcap (14%)</option>
-      <option value="10">Parag Parikh Flexi (10%)</option>
-    </select>
+  <option value="19.2">Parag Parikh Flexi Cap – 19.2%</option>
+  <option value="22.7">Motilal Oswal Midcap – 22.7%</option>
+  <option value="12.5">Quant Small Cap – 12.5%</option>
+  <option value="35">Nippon India Small Cap – 35%</option>
+  <option value="36">Bandhan Small Cap – 36%</option>
+  <option value="22">SBI Small Cap – 22%</option>
+  <option value="23">HDFC Tax Saver (ELSS) – 23%</option>
+  <option value="22">Nippon India Growth – 22%</option>
+  <option value="12">ICICI Prudential Bluechip – 12%</option>
+  <option value="20">Franklin India Bluechip – 20%</option>
+</select>
 
     <label for="sipAmount">💰 Monthly SIP (₹):</label>
     <input type="number" id="sipAmount" placeholder="Enter amount" />
