--- a/index.html
+++ b/index.html
@@ -11,16 +11,53 @@
 
     <label for="fund">Select Fund:</label>
     <select id="fund">
-  <option value="19.2">Parag Parikh Flexi Cap – 19.2%</option>
-  <option value="22.7">Motilal Oswal Midcap – 22.7%</option>
-  <option value="12.5">Quant Small Cap – 12.5%</option>
-  <option value="35">Nippon India Small Cap – 35%</option>
-  <option value="36">Bandhan Small Cap – 36%</option>
-  <option value="22">SBI Small Cap – 22%</option>
-  <option value="23">HDFC Tax Saver (ELSS) – 23%</option>
-  <option value="22">Nippon India Growth – 22%</option>
-  <option value="12">ICICI Prudential Bluechip – 12%</option>
-  <option value="20">Franklin India Bluechip – 20%</option>
+  <option value="22.99">Nippon India Small Cap Fund</option>
+  <option value="21.74">Quant ELSS Tax Saver Fund</option>
+  <option value="20.76">Quant Small Cap Fund</option>
+  <option value="20.60">HSBC Small Cap Fund</option>
+  <option value="20.37">SBI Small Cap Fund</option>
+  <option value="20.35">Axis Small Cap Fund</option>
+  <option value="20.25">Quant Flexi Cap Fund</option>
+  <option value="19.79">Quant Infrastructure Fund</option>
+  <option value="19.79">HDFC Small Cap Fund</option>
+  <option value="19.78">Invesco India Midcap Fund</option>
+  <option value="19.66">Edelweiss Mid Cap Fund</option>
+  <option value="19.56">Kotak Emerging Equity Fund</option>
+  <option value="19.32">Kotak Small Cap Fund</option>
+  <option value="19.19">Aditya Birla SL Digital India Fund</option>
+  <option value="19.06">Motilal Oswal Midcap Fund</option>
+  <option value="19.03">ICICI Pru Technology Fund</option>
+  <option value="18.98">Quant Active Fund</option>
+  <option value="18.92">Nippon India Growth Fund</option>
+  <option value="18.87">HDFC Mid Cap Fund</option>
+  <option value="18.67">Mirae Asset Large & Midcap Fund</option>
+  <option value="18.61">Parag Parikh Flexi Cap Fund</option>
+  <option value="18.56">Franklin Build India Fund</option>
+  <option value="18.55">Invesco India Infrastructure Fund</option>
+  <option value="18.51">Invesco India PSU Equity Fund</option>
+  <option value="18.47">Motilal Oswal ELSS Tax Saver Fund</option>
+  <option value="18.45">DSP Small Cap Fund</option>
+  <option value="18.43">SBI Technology Opportunities Fund</option>
+  <option value="18.34">DSP Natural Resources & New Energy Fund</option>
+  <option value="18.15">Quant Mid Cap Fund</option>
+  <option value="18.12">Quant Multi Asset Fund</option>
+  <option value="17.80">Quant Large & Mid Cap Fund</option>
+  <option value="17.70">HSBC Value Fund</option>
+  <option value="17.69">Nippon India Power & Infra Fund</option>
+  <option value="17.64">Franklin India Smaller Companies Fund</option>
+  <option value="17.62">Invesco India Contra Fund</option>
+  <option value="17.59">HSBC Midcap Fund</option>
+  <option value="17.58">JM Value Fund</option>
+  <option value="17.57">Franklin India Technology Fund</option>
+  <option value="17.56">Axis Midcap Fund</option>
+  <option value="16.94">Baroda BNP Paribas Mid Cap Fund</option>
+  <option value="16.89">Tata Mid Cap Growth Fund</option>
+  <option value="16.85">SBI Infrastructure Fund</option>
+  <option value="16.83">Quant Absolute Fund</option>
+  <option value="16.82">ICICI Pru Large & Mid Cap Fund</option>
+  <option value="16.75">ICICI Pru Equity & Debt Fund</option>
+  <option value="16.74">Kotak Equity Opportunities Fund</option>
+  <option value="16.71">DSP Large & Mid Cap Fund</option>
 </select>
 
     <label for="sipAmount">💰 Monthly SIP (₹):</label>
