--- a/index.html
+++ b/index.html
@@ -58,6 +58,45 @@
   <option value="16.75">ICICI Pru Equity & Debt Fund</option>
   <option value="16.74">Kotak Equity Opportunities Fund</option>
   <option value="16.71">DSP Large & Mid Cap Fund</option>
+     <option value="18.07">UTI Mid Cap Fund</option>
+<option value="17.94">Canara Robeco Emerging Equities Fund</option>
+<option value="17.89">Mahindra Manulife Mid Cap Fund</option>
+<option value="17.76">Union Midcap Fund</option>
+<option value="17.55">Sundaram Mid Cap Fund</option>
+<option value="17.42">Tata Mid Cap Growth Fund</option>
+<option value="17.30">Baroda BNP Paribas Mid Cap Fund</option>
+<option value="17.25">PGIM India Midcap Opportunities Fund</option>
+<option value="17.19">Navi Mid Cap Fund</option>
+<option value="17.02">JM Mid Cap Fund</option>
+<option value="16.85">Bank of India Midcap Fund</option>
+<option value="16.74">Indiabulls Midcap Fund</option>
+<option value="16.63">ITI Mid Cap Fund</option>
+<option value="16.57">HSBC Midcap Fund</option>
+<option value="16.41">TrustMF Midcap Fund</option>
+<option value="16.29">Samco Midcap Fund</option>
+<option value="16.21">WhiteOak Midcap Fund</option>
+<option value="16.08">NJ Mid Cap Fund</option>
+<option value="15.99">Shriram Midcap Fund</option>
+<option value="15.75">Taurus Midcap Fund</option>
+<option value="15.60">Quant ESG Equity Fund</option>
+<option value="15.42">Motilal Oswal Nifty Midcap 150 Index Fund</option>
+<option value="15.38">Invesco India Midcap 150 ETF</option>
+<option value="15.17">Edelweiss Midcap Fund</option>
+<option value="14.98">ICICI Pru Nifty Midcap 150 Index Fund</option>
+<option value="14.85">LIC MF Midcap Fund</option>
+<option value="14.76">Canara Robeco Midcap Fund</option>
+<option value="14.62">Baroda BNP Paribas Midcap Fund</option>
+<option value="14.43">Axis Midcap Fund</option>
+<option value="14.33">IDBI Midcap Fund</option>
+<option value="14.12">IDFC Midcap Fund</option>
+<option value="13.97">HSBC Nifty Midcap 150 Index Fund</option>
+<option value="13.86">JM Midcap Opportunities Fund</option>
+<option value="13.72">Union Midcap Opportunities Fund</option>
+<option value="13.59">Quant Midcap Opportunities Fund</option>
+<option value="13.43">PGIM India Nifty Midcap 150 Index Fund</option>
+<option value="13.26">HDFC Nifty Midcap 150 Index Fund</option>
+<option value="13.09">SBI Nifty Midcap 150 Index Fund</option>
+     
 </select>
 
     <label for="sipAmount">💰 Monthly SIP (₹):</label>
