--- a/index.html
+++ b/index.html
@@ -99,7 +99,45 @@
 <option value="13.43">PGIM India Nifty Midcap 150 Index Fund</option>
 <option value="13.26">HDFC Nifty Midcap 150 Index Fund</option>
 <option value="13.09">SBI Nifty Midcap 150 Index Fund</option>
-     
+   <option value="18.45">PGIM India Flexi Cap Fund</option>
+<option value="18.10">Canara Robeco Small Cap Fund</option>
+<option value="17.96">Quant Large and Mid Cap Fund</option>
+<option value="17.65">Nippon India Multi Cap Fund</option>
+<option value="17.23">Kotak Emerging Equity Fund</option>
+<option value="17.02">Motilal Oswal Midcap Fund</option>
+<option value="16.90">Tata Small Cap Fund</option>
+<option value="16.75">UTI Flexi Cap Fund</option>
+<option value="16.40">HDFC Flexi Cap Fund</option>
+<option value="16.35">Canara Robeco Emerging Equities Fund</option>
+<option value="16.01">Sundaram Midcap Fund</option>
+<option value="15.85">ICICI Prudential Small Cap Fund</option>
+<option value="15.60">Edelweiss Mid Cap Fund</option>
+<option value="15.49">SBI Contra Fund</option>
+<option value="15.20">Axis Midcap Fund</option>
+<option value="15.00">Tata Mid Cap Growth Fund</option>
+<option value="14.95">DSP Midcap Fund</option>
+<option value="14.60">Mahindra Manulife Small Cap Fund</option>
+<option value="14.45">IDFC Sterling Value Fund</option>
+<option value="14.10">Kotak Flexicap Fund</option>
+<option value="13.85">Mirae Asset Midcap Fund</option>
+<option value="13.70">ICICI Prudential Midcap Fund</option>
+<option value="13.55">Baroda BNP Paribas Small Cap Fund</option>
+<option value="13.43">JM Flexicap Fund</option>
+<option value="13.35">Motilal Oswal Flexicap Fund</option>
+<option value="13.25">UTI Mid Cap Fund</option>
+<option value="13.00">Nippon India Flexicap Fund</option>
+<option value="12.90">DSP Flexicap Fund</option>
+<option value="12.70">Invesco India Midcap Fund</option>
+<option value="12.55">ICICI Prudential Flexicap Fund</option>
+<option value="12.40">HSBC Flexicap Fund</option>
+<option value="12.25">Edelweiss Flexicap Fund</option>
+<option value="12.10">Franklin India Flexicap Fund</option>
+<option value="11.95">Sundaram Flexicap Fund</option>
+<option value="11.80">Axis Flexicap Fund</option>
+<option value="11.60">Baroda BNP Paribas Flexicap Fund</option>
+<option value="11.50">IDFC Flexicap Fund</option>
+<option value="11.30">Union Flexicap Fund</option>
+<option value="11.00">LIC MF Flexicap Fund</option>  
 </select>
 
     <label for="sipAmount">💰 Monthly SIP (₹):</label>
