--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@
     <button onclick="calculateSIP()">Calculate</button>
 
     <div class="output" id="result"></div>
+
+   <div id="resultInWords" style="margin-top: 10px; font-size: 1rem; color: #444;"></div>
+<canvas id="growthChart" style="margin-top: 20px; max-width: 100%;"></canvas>
+   
   </div>
 <script src="script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
