--- a/index.html
+++ b/index.html
@@ -151,9 +151,13 @@
 <script>
   document.addEventListener('DOMContentLoaded', function () {
     const fundDropdown = document.getElementById('fund');
-    const choices = new Choices(fundDropdown, {
-      searchEnabled: true,
-      itemSelectText: '',
+    const cagrInput = document.getElementById('cagr');
+
+    fundDropdown.addEventListener('change', function () {
+      const selectedValue = this.value;
+      if (selectedValue) {
+        cagrInput.value = selectedValue;
+      }
     });
   });
 </script>
