--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8">
   <title>Realistic SIP Returns Tool</title>
   <link rel="stylesheet" href="style.css">
-  ...
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
-  ...
 </head>
 <body>
   <div class="container">
@@ -121,9 +119,7 @@
   <option value="11.30">Union Flexicap Fund</option>
   <option value="11.00">LIC MF Flexicap Fund</option>
 </select>
-
-
-    <label for="sipAmount">💰 Monthly SIP (₹):</label>
+ <label for="sipAmount">💰 Monthly SIP (₹):</label>
     <input type="number" id="sipAmount" placeholder="Enter amount" />
 
     <label for="years">📅 Duration (Years):</label>
@@ -135,30 +131,14 @@
     <button onclick="calculateSIP()">Calculate</button>
 
     <div class="output" id="result"></div>
-
-   <div id="resultInWords" style="margin-top: 10px; font-size: 1rem; color: #444;"></div>
-
-    <canvas id="growthChart" width="400" height="200"></canvas>
-   
+    <div id="resultInWords" style="margin-top: 10px; font-size: 1rem; color: #444;"></div>
+    <canvas id="growthChart" style="margin-top: 20px; max-width: 100%;" width="400" height="200"></canvas>
   </div>
 
-
- 
-<script src="script.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
-<script>
-  document.addEventListener('DOMContentLoaded', function () {
-    const fundDropdown = document.getElementById('fund');
-    const cagrInput = document.getElementById('cagr');
-
-    fundDropdown.addEventListener('change', function () {
-      const selectedValue = this.value;
-      if (selectedValue) {
-        cagrInput.value = selectedValue;
-      }
-    });
-  });
-</script>
-
+  <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
+
+   
