--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
     <div class="output" id="result"></div>
     <div id="resultInWords" style="margin-top: 10px; font-size: 1rem; color: #444;"></div>
     <canvas id="growthChart" style="margin-top: 20px; max-width: 100%;" width="400" height="200"></canvas>
+   <div id="summary" style="margin-top: 15px; font-size: 1rem; color: #444;"></div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
