--- a/index.html
+++ b/index.html
@@ -124,6 +124,12 @@
     <label for="cagr">📊 CAGR (%):</label>
     <input type="number" id="cagr" placeholder="Auto or Manual" />
 
+    <!-- ⚡ New inflation toggle added here -->
+    <label style="display: flex; align-items: center; gap: 10px; margin-top: 15px;">
+      <input type="checkbox" id="adjustInflation" />
+      Adjust for Inflation (real returns)
+    </label>
+
     <button onclick="calculateSIP()">Calculate</button>
 
     <div class="output" id="result"></div>
