--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
     <input type="checkbox" id="adjustInflation" />
     <span class="slider"></span>
   </label>
-  <label for="adjustInflation" class="toggle-label">Adjust for Inflation (Real Returns)</label>
+  <label for="adjustInflation" class="toggle-label">
+  Adjust for Inflation (Real Returns)<sup title="Assuming average inflation rate of 6%">⭐</sup>
+</label>
 </div>
 
     <button onclick="calculateSIP()">Calculate</button>
