--- a/index.html
+++ b/index.html
@@ -131,8 +131,9 @@
     <span class="slider"></span>
   </label>
   <label for="adjustInflation" class="toggle-label">
-  Adjust for Inflation (Real Returns)<sup title="Assuming average inflation rate of 6%">⭐</sup>
+  Adjust for Inflation (Real Returns)<sup>⭐</sup>
 </label>
+<small class="note">⭐ Assumes average inflation of <strong>6%</strong> per year</small>
 </div>
 
     <button onclick="calculateSIP()">Calculate</button>
