--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
   Adjust for Inflation (Real Returns)<sup>⭐</sup>
 </label>
 <small class="note">⭐ Assumes average inflation of <strong>6%</strong> per year</small>
+     <!-- Inflation Rate input (hidden unless toggle is checked) -->
+<div id="inflationRateGroup" style="display:none; margin-top: 10px;">
+  <label for="inflationRate">📉 Inflation Rate (%):</label>
+  <input type="number" id="inflationRate" value="6" min="0" max="15" />
 </div>
 
     <button onclick="calculateSIP()">Calculate</button>
