--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>📈 Realistic SIP Returns Tool</h1>
 
     <label for="fund">Select Fund:</label>
-   <select id="fund">
+   <select id="fund" name="fund">
   <option value="22.99">Nippon India Small Cap Fund</option>
   <option value="21.74">Quant ELSS Tax Saver Fund</option>
   <option value="20.76">Quant Small Cap Fund</option>
