--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>📈 Realistic SIP Returns Tool</h1>
+    <h1>📊 SIPWISE</h1>
+<p style="font-size: 0.95rem; color: #666; margin-top: -10px;">The Honest SIP Calculator</p>
 
     <label for="fund">Select Fund:</label>
    <select id="fund" name="fund">
