--- a/index.html
+++ b/index.html
@@ -135,7 +135,18 @@
         Adjust for Inflation (Real Returns)<sup>⭐</sup>
       </label>
     </div>
-
+    
+<!-- 🌙 Dark Mode Toggle Section -->
+<div class="toggle-row">
+  <label class="switch">
+    <input type="checkbox" id="darkModeToggle" />
+    <span class="slider"></span>
+  </label>
+  <label for="darkModeToggle" class="toggle-label">
+    Dark Mode 🌙
+  </label>
+</div>
+    
     <!-- Inflation Note -->
     <small class="note">⭐ Assumes average inflation of <strong>6%</strong> per year</small>
 
