--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@
       <input type="number" id="inflationRate" value="6" min="0" max="15" />
     </div>
 
-    <!-- Calculate Button -->
-    <button onclick="calculateSIP()">Calculate</button>
+    <button id="calculateBtn">Calculate</button>
 
     <!-- Result Outputs -->
     <div class="output" id="result"></div>
