--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <option value="13.70">ICICI Prudential Midcap Fund</option>
   <option value="13.59">Quant Midcap Opportunities Fund</option>
   <option value="13.55">Baroda BNP Paribas Small Cap Fund</option>
-  <option value="13.43">PGIM India Nifty Midcap 150 Index Fund</option>
+  <option value="13.43">PGIM India</option>
   <option value="13.35">Motilal Oswal Flexicap Fund</option>
   <option value="13.26">HDFC Nifty Midcap 150 Index Fund</option>
   <option value="13.25">UTI Mid Cap Fund</option>
