--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     </div>
 
     <!-- Calculate Button -->
-    <button onclick="calculateSIP()">Calculate</button>
+   <button id="calculateBtn">Calculate</button>
 
     <!-- Output Sections -->
     <div id="result" class="output" style="margin-top: 20px;"></div>
