--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
 
     <!-- Output Sections -->
     <div id="result" class="output" style="margin-top: 20px;"></div>
-    <div id="resultInWords" style="margin-top: 10px; font-size: 1rem; color: #444;"></div>
-    <div id="summary" style="margin-top: 15px; font-size: 1rem; color: #444;"></div>
+    <div id="resultInWords" class="text-output"></div>
+<div id="summary" class="text-output summary"></div>
 
     <!-- Chart -->
     <canvas id="myChart" style="margin-top: 20px; max-width: 100%;" width="400" height="200"></canvas>
