--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
     <label for="cagr">📊 CAGR (%):</label>
     <input type="number" id="cagr" placeholder="Auto or Manual" />
 
+    <label for="deviation">📉 Deviation (%):</label>
+<input type="number" id="deviation" placeholder="e.g. 2" />
+
     <!-- Inflation Toggle Section -->
     <div class="toggle-row">
       <label class="switch">
