--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <label for="fund">Select Fund:</label>
    <select id="fund" name="fund">
+       <option value="" disabled selected>Select a fund</option>
   <option value="22.99">Nippon India Small Cap Fund</option>
   <option value="21.74">Quant ELSS Tax Saver Fund</option>
   <option value="20.76">Quant Small Cap Fund</option>
