--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <div class="container">
+  <div style="display: flex; justify-content: space-between; align-items: center;">
     <h1>📊 SIPWISE</h1>
+    <a href="compare.html" class="compare-btn">Compare Funds</a>
+  </div>
 <p style="font-size: 0.95rem; color: #666; margin-top: -10px;">The Honest SIP Calculator</p>
 
     <label for="fund">Select Fund:</label>
