--- a/compare.html
+++ b/compare.html
@@ -37,13 +37,104 @@
   <script>
     // ✅ Step 1: Real Fund Data (name => CAGR)
     const fundData = {
-      "Nippon India Small Cap Fund": 22.99,
-      "Quant ELSS Tax Saver Fund": 21.74,
-      "Quant Small Cap Fund": 20.76,
-      "HSBC Small Cap Fund": 20.60,
-      "SBI Small Cap Fund": 20.37
-      // Add more funds here
-    };
+  "Nippon India Small Cap Fund": 22.99,
+  "Quant ELSS Tax Saver Fund": 21.74,
+  "Quant Small Cap Fund": 20.76,
+  "HSBC Small Cap Fund": 20.60,
+  "SBI Small Cap Fund": 20.37,
+  "Axis Small Cap Fund": 20.35,
+  "Quant Flexi Cap Fund": 20.25,
+  "Quant Infrastructure Fund": 19.79,
+  "HDFC Small Cap Fund": 19.79,
+  "Edelweiss Mid Cap Fund": 19.66,
+  "Kotak Emerging Equity Fund": 19.56,
+  "Kotak Small Cap Fund": 19.32,
+  "Aditya Birla SL Digital India Fund": 19.19,
+  "ICICI Pru Technology Fund": 19.03,
+  "Quant Active Fund": 18.98,
+  "Nippon India Growth Fund": 18.92,
+  "HDFC Mid Cap Fund": 18.87,
+  "Mirae Asset Large & Midcap Fund": 18.67,
+  "Parag Parikh Flexi Cap Fund": 18.61,
+  "Franklin Build India Fund": 18.56,
+  "Invesco India Infrastructure Fund": 18.55,
+  "Invesco India PSU Equity Fund": 18.51,
+  "Motilal Oswal ELSS Tax Saver Fund": 18.47,
+  "DSP Small Cap Fund": 18.45,
+  "SBI Technology Opportunities Fund": 18.43,
+  "DSP Natural Resources & New Energy Fund": 18.34,
+  "Quant Mid Cap Fund": 18.15,
+  "Quant Multi Asset Fund": 18.12,
+  "Quant Large and Mid Cap Fund": 17.96,
+  "Canara Robeco Emerging Equities Fund": 17.94,
+  "Mahindra Manulife Mid Cap Fund": 17.89,
+  "Union Midcap Fund": 17.76,
+  "Nippon India Multi Cap Fund": 17.65,
+  "Franklin India Smaller Companies Fund": 17.64,
+  "Invesco India Contra Fund": 17.62,
+  "HSBC Midcap Fund": 17.59,
+  "Franklin India Technology Fund": 17.57,
+  "Axis Midcap Fund": 17.56,
+  "Sundaram Mid Cap Fund": 17.55,
+  "Tata Mid Cap Growth Fund": 17.42,
+  "Baroda BNP Paribas Mid Cap Fund": 16.94,
+  "PGIM India Midcap Opportunities Fund": 17.25,
+  "Navi Mid Cap Fund": 17.19,
+  "JM Mid Cap Fund": 17.02,
+  "Tata Small Cap Fund": 16.90,
+  "Bank of India Midcap Fund": 16.85,
+  "Quant Absolute Fund": 16.83,
+  "ICICI Pru Large & Mid Cap Fund": 16.82,
+  "ICICI Pru Equity & Debt Fund": 16.75,
+  "Kotak Equity Opportunities Fund": 16.74,
+  "DSP Large & Mid Cap Fund": 16.71,
+  "ITI Mid Cap Fund": 16.63,
+  "TrustMF Midcap Fund": 16.41,
+  "Samco Midcap Fund": 16.29,
+  "WhiteOak Midcap Fund": 16.21,
+  "NJ Mid Cap Fund": 16.08,
+  "Sundaram Midcap Fund": 16.01,
+  "Shriram Midcap Fund": 15.99,
+  "ICICI Prudential Small Cap Fund": 15.85,
+  "Taurus Midcap Fund": 15.75,
+  "Quant ESG Equity Fund": 15.60,
+  "SBI Contra Fund": 15.49,
+  "Motilal Oswal Nifty Midcap 150 Index Fund": 15.42,
+  "Invesco India Midcap 150 ETF": 15.38,
+  "ICICI Pru Nifty Midcap 150 Index Fund": 14.98,
+  "DSP Midcap Fund": 14.95,
+  "LIC MF Midcap Fund": 14.85,
+  "Canara Robeco Midcap Fund": 14.76,
+  "Kotak Flexicap Fund": 14.70,
+  "Mahindra Manulife Small Cap Fund": 14.60,
+  "IDFC Sterling Value Fund": 14.45,
+  "IDBI Midcap Fund": 14.33,
+  "IDFC Midcap Fund": 14.12,
+  "HSBC Nifty Midcap 150 Index Fund": 13.97,
+  "Mirae Asset Midcap Fund": 13.85,
+  "Union Midcap Opportunities Fund": 13.72,
+  "ICICI Prudential Midcap Fund": 13.70,
+  "Quant Midcap Opportunities Fund": 13.59,
+  "Baroda BNP Paribas Small Cap Fund": 13.55,
+  "PGIM India": 13.43,
+  "Motilal Oswal Flexicap Fund": 13.35,
+  "HDFC Nifty Midcap 150 Index Fund": 13.26,
+  "UTI Mid Cap Fund": 13.25,
+  "SBI Nifty Midcap 150 Index Fund": 13.09,
+  "Nippon India Flexicap Fund": 13.00,
+  "DSP Flexicap Fund": 12.90,
+  "Invesco India Midcap Fund": 12.70,
+  "ICICI Prudential Flexicap Fund": 12.55,
+  "HSBC Flexicap Fund": 12.40,
+  "Edelweiss Flexicap Fund": 12.25,
+  "Franklin India Flexicap Fund": 12.10,
+  "Sundaram Flexicap Fund": 11.95,
+  "Axis Flexicap Fund": 11.80,
+  "Baroda BNP Paribas Flexicap Fund": 11.60,
+  "IDFC Flexicap Fund": 11.50,
+  "Union Flexicap Fund": 11.30,
+  "LIC MF Flexicap Fund": 11.00
+};
 
     // ✅ Step 2: Populate dropdowns
     window.onload = () => {
