--- a/index.html
+++ b/index.html
@@ -180,7 +180,10 @@
   <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="script.js"></script>
-<iframe src="https://your-username.github.io/mutual-fund-chatbot/" 
-style="position:fixed;bottom:20px;right:20px;width:350px;height:500px;border:none;border-radius:10px;z-index:999;"></iframe>
-</body>
+<!-- Chatbot Iframe -->
+<iframe 
+  src="https://ayush22z.github.io/mutual-fund-chatbot/" 
+  style="position:fixed;bottom:20px;right:20px;width:350px;height:500px;border:none;border-radius:10px;z-index:999;box-shadow:0 0 10px rgba(0,0,0,0.2);">
+</iframe>
+  </body>
 </html>
