--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Realistic SIP Returns Tool</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
+  <a href="chatbot.html" class="btn-chat">Ask Chatbot</a>
 </head>
 <body>
   <div class="container">
