--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
   <title>Realistic SIP Returns Tool</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
-  <a href="chatbot.html" class="btn-chat">Ask Chatbot</a>
 </head>
 <body>
   <div class="container">
-  <div style="display: flex; justify-content: space-between; align-items: center;">
-    <h1>📊 SIPWISE</h1>
-    <a href="compare.html" class="compare-btn">Compare Funds</a>
-  </div>
+    <div style="display: flex; justify-content: space-between; align-items: center;">
+      <h1>📊 SIPWISE</h1>
+      <div style="display: flex; gap: 10px;">
+        <a href="chatbot.html" class="btn-chat">Ask Chatbot</a>
+        <a href="compare.html" class="compare-btn">Compare Funds</a>
+      </div>
+    </div>
 <p style="font-size: 0.95rem; color: #666; margin-top: -10px;">The Honest SIP Calculator</p>
 
     <label for="fund">Select Fund:</label>
