--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
 </head>
 <body>
-  <div class="container">
-    <div style="display: flex; justify-content: space-between; align-items: center;">
-      <h1>📊 SIPWISE</h1>
-      <div style="display: flex; gap: 10px;">
-        <a href="chatbot.html" class="btn-chat">Ask Chatbot</a>
-        <a href="compare.html" class="compare-btn">Compare Funds</a>
-      </div>
+ <div class="container">
+  <div class="header-bar">
+    <h1>📊 SIPWISE</h1>
+    <div class="header-buttons">
+      <a href="chatbot.html" class="btn-chat">🤖 Ask Chatbot</a>
+      <a href="compare.html" class="btn-compare">📈 Compare Funds</a>
     </div>
+  </div>
 <p style="font-size: 0.95rem; color: #666; margin-top: -10px;">The Honest SIP Calculator</p>
 
     <label for="fund">Select Fund:</label>
