--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 </head>
 <body>
  <div class="container">
-  <div class="header-bar">
-    <h1>📊 SIPWISE</h1>
-    <div class="header-buttons">
+  <div class="header-bar" style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
+    <h1 style="margin: 0;">📊 <span style="color:#6197ff;">SIPWISE</span></h1>
+    <div class="button-group" style="display: flex; gap: 10px; margin-top: 10px;">
       <a href="chatbot.html" class="btn-chat">🤖 Ask Chatbot</a>
-      <a href="compare.html" class="btn-compare">📈 Compare Funds</a>
+      <a href="compare.html" class="compare-btn">📈 Compare Funds</a>
     </div>
   </div>
+  <p style="margin-top: 5px; color: #666; font-size: 14px;">The Honest SIP Calculator</p>
+</div>
 <p style="font-size: 0.95rem; color: #666; margin-top: -10px;">The Honest SIP Calculator</p>
 
     <label for="fund">Select Fund:</label>
