--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@
   <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="script.js"></script>
-<!-- Chatbot Iframe -->
+<body class="main-page"> <!-- for index.html -->
+<body class="chat-page"> <!-- for chatbot.html -->
+<body class="compare-page"> <!-- for compare.html -->
 
   </body>
 </html>
